--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@ priority: 1.0
 {% for post in paginator.posts %}
   {% assign content = post.content %}
   {% if post.layout == "post" %}
-    {% include _post.html %}
+    {% include _post_excerpt.html %}
   {% elsif post.layout == "quote" %}
     {% include _quote.html %}
   {% endif %}
