Hax to simplify getting post summaries dynamically
because page.content is gibberish for lots of pages :/

--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 homepage: true
+description: "The story of an irresponsible thirty year old man-child
+              who decided he didn't want to wait until he was old to have
+              a turn at enjoying retirement. Instead of following the common life path of getting
+              married, buying a house, and having two kids, he's chosen
+              to seek out epic adventures, see the world, and hopefully
+              have great times that he'll reminisce about when he's old
+              and senile."
 priority: 1.0
 ---
 
