--- a/source/index.html
+++ b/source/index.html
@@ -17,20 +17,18 @@ priority: 1.0
   {% assign content = post.content %}
   {% if post.layout == "post" %}
     {% include _post_excerpt.html %}
-  {% elsif post.layout == "quote" %}
-    {% include _quote.html %}
   {% endif %}
 {% endfor %}
 </section><!-- /#posts -->
 
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a class="page-previous" href="{{paginator.previous_page}}"><i class="fa fa-arrow-circle-left fa-lg"></i> Newer</a>
+    <a class="page-previous" href="{{paginator.previous_page_path}}"><i class="fa fa-arrow-circle-left fa-lg"></i> Newer</a>
   {% endif %}
 
   <span class="page-current">— Page {{paginator.page}} of {{paginator.total_pages}} —</span>
 
   {% if paginator.next_page %}
-  <a class="page-next" href="{{paginator.next_page}}">Older <i class="fa fa-arrow-circle-right fa-lg"></i></a>
+  <a class="page-next" href="{{paginator.next_page_path}}">Older <i class="fa fa-arrow-circle-right fa-lg"></i></a>
   {% endif %}
 </div>
